Create users model, controller, definition and test
