# api/swagger/swagger.yaml
@@ -1,60 +1,97 @@
 swagger: "2.0"
 info:
-  version: "0.0.1"
-  title: Hello World App
-# during dev, should point to your local machine
+  version: 0.0.1
+  title: Rewards API
+  description: A membership API which allows returning customers to accrue rewards and redeem those rewards when they make future purchases.
+  contact:
+    name: Jimmy Cann
+    email: mail@jimmycann.com
+    url: https://jimmycann.com
+  license:
+    name: MIT
+    url: https://github.com/yjimk/rewards-api/LICENSE.md
 host: localhost:10010
-# basePath prefixes all resource paths 
 basePath: /
-# 
 schemes:
-  # tip: remove http to make production-grade
   - http
   - https
-# format of bodies a client can send (Content-Type)
 consumes:
   - application/json
-# format of the responses to the client (Accepts)
+  - application/x-www-form-urlencoded
 produces:
   - application/json
 paths:
-  /hello:
+  /api/v1/users/create:
     # binds a127 app logic to a route
-    x-swagger-router-controller: hello_world
-    get:
-      description: Returns 'Hello' to the caller
-      # used as the method name of the controller
-      operationId: hello
+    x-swagger-router-controller: UsersController
+    post:
+      description: Creates a new user
+      operationId: create
       parameters:
-        - name: name
-          in: query
-          description: The name of the person to whom to say hello
-          required: false
-          type: string
+        - name: user
+          in: body
+          description: Parameters required for creating a new user
+          required: true
+          schema:
+            $ref: '#/definitions/NewUser'
       responses:
         "200":
-          description: Success
+          description: New user has been created
           schema:
-            # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
-        # responses may fall through to errors
+            $ref: '#/definitions/User'
         default:
-          description: Error
+          description: Unexpected Error
           schema:
-            $ref: "#/definitions/ErrorResponse"
+            $ref: '#/definitions/Error'
   /swagger:
     x-swagger-pipe: swagger_raw
-# complex objects have schema definitions
+
 definitions:
-  HelloWorldResponse:
+  User:
+    allOf:
+      - $ref: '#/definitions/NewUser'
+      - required:
+        - id
+        properties:
+          id:
+            type: integer
+            format: int64
+
+  NewUser:
+    type: object
     required:
-      - message
+      - firstName
+      - lastName
+      - email
     properties:
-      message:
+      firstName:
         type: string
-  ErrorResponse:
+        description: The users' first name
+        minLength: 2
+        maxLength: 64
+      lastName:
+        type: string
+        description: The users' last name
+        minLength: 2
+        maxLength: 64
+      email:
+        type: string
+        description: The users' email address
+        minLength: 3
+        maxLength: 254
+      mob:
+        type: integer
+        description: The users' mobile phone number
+        minLength: 8
+        maxLength: 16
+
+  Error:
     required:
+      - code
       - message
     properties:
+      code:
+        type: integer
+        format: int32
       message:
         type: string
